bindings/rust/idax-sys/shim/idax_shim.h

typedef struct IdaxDatabaseSnapshot {
    int64_t id;
    uint16_t flags;
    char* description;
    char* filename;
    struct IdaxDatabaseSnapshot* children;
    size_t child_count;
} IdaxDatabaseSnapshot;
int idax_database_snapshots(IdaxDatabaseSnapshot** out, size_t* count);
void idax_database_snapshots_free(IdaxDatabaseSnapshot* snapshots, size_t count);
int idax_database_set_snapshot_description(const char* description);
int idax_database_is_snapshot_database(int* out);
int idax_database_input_file_path(char** out);
int idax_database_idb_path(char** out);
int idax_database_file_type_name(char** out);
int idax_database_loader_format_name(char** out);
int idax_database_input_md5(char** out);
int idax_database_image_base(uint64_t* out);
int idax_database_min_address(uint64_t* out);
int idax_database_max_address(uint64_t* out);
int idax_database_processor_id(int32_t* out);
typedef struct IdaxDatabaseProcessorProfile {
    int32_t raw_id;
    int32_t known_id;
    int     has_known_id;
    char*   name;
    int     address_bitness;
    int     big_endian;
    char*   abi_name;
} IdaxDatabaseProcessorProfile;
int idax_database_processor_profile(IdaxDatabaseProcessorProfile* out);
void idax_database_processor_profile_free(IdaxDatabaseProcessorProfile* profile);
int idax_database_processor_name(char** out);
int idax_database_address_bitness(int* out);
int idax_database_set_address_bitness(int bits);
int idax_database_is_big_endian(int* out);
int idax_database_abi_name(char** out);
int idax_database_address_span(uint64_t* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Path (ida::path)
 * ═══════════════════════════════════════════════════════════════════════════ */

int idax_path_basename(const char* path, char** out);
int idax_path_dirname(const char* path, char** out);
int idax_path_is_directory(const char* path, int* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Undo (ida::undo)
 * ═══════════════════════════════════════════════════════════════════════════ */

int idax_undo_create_point(const char* action_name, const char* label, int* out);
int idax_undo_undo_action_label(char** out);
int idax_undo_redo_action_label(char** out);
int idax_undo_perform_undo(int* out);
int idax_undo_perform_redo(int* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Analysis problems (ida::problem)
 * ═══════════════════════════════════════════════════════════════════════════ */

int idax_problem_description(int kind, uint64_t address, char** out);
int idax_problem_remember(int kind, uint64_t address, const char* message);
int idax_problem_next(int kind, uint64_t at_or_after,
                      uint64_t* out, int* has_value);
int idax_problem_remove(int kind, uint64_t address, int* out);
int idax_problem_name(int kind, int long_form, char** out);
int idax_problem_contains(int kind, uint64_t address, int* out);
typedef struct IdaxBookmark {
    uint64_t address;
    uint32_t slot;
    char* description;
} IdaxBookmark;
int idax_bookmark_all(IdaxBookmark** out, size_t* count);
int idax_bookmark_at(uint64_t address, IdaxBookmark* out, int* has_value);
int idax_bookmark_at_slot(uint32_t slot, IdaxBookmark* out, int* has_value);
int idax_bookmark_set(uint64_t address, const char* description,
                      int has_slot, uint32_t slot, IdaxBookmark* out);
int idax_bookmark_remove(uint64_t address, int* out);
int idax_bookmark_remove_slot(uint32_t slot, int* out);
void idax_bookmark_free(IdaxBookmark* bookmark);
void idax_bookmarks_free(IdaxBookmark* bookmarks, size_t count);
/* ═══════════════════════════════════════════════════════════════════════════
 * Address navigation history (ida::navigation)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef void* IdaxNavigationHistoryHandle;
typedef struct IdaxNavigationEntry {
    uint64_t address;
    char* channel;
    char* metadata;
} IdaxNavigationEntry;