bindings/rust/idax-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxDatabaseSnapshot"][::std::mem::size_of::<IdaxDatabaseSnapshot>() - 48usize];
    ["Alignment of IdaxDatabaseSnapshot"][::std::mem::align_of::<IdaxDatabaseSnapshot>() - 8usize];
    ["Offset of field: IdaxDatabaseSnapshot::id"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, id) - 0usize];
    ["Offset of field: IdaxDatabaseSnapshot::flags"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, flags) - 8usize];
    ["Offset of field: IdaxDatabaseSnapshot::description"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, description) - 16usize];
    ["Offset of field: IdaxDatabaseSnapshot::filename"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, filename) - 24usize];
    ["Offset of field: IdaxDatabaseSnapshot::children"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, children) - 32usize];
    ["Offset of field: IdaxDatabaseSnapshot::child_count"]
        [::std::mem::offset_of!(IdaxDatabaseSnapshot, child_count) - 40usize];
};
impl Default for IdaxDatabaseSnapshot {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_database_snapshots(
        out: *mut *mut IdaxDatabaseSnapshot,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_snapshots_free(snapshots: *mut IdaxDatabaseSnapshot, count: usize);
}
unsafe extern "C" {
    pub fn idax_database_set_snapshot_description(
        description: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_is_snapshot_database(
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_input_file_path(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_idb_path(out: *mut *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_file_type_name(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_loader_format_name(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_input_md5(out: *mut *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_image_base(out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_min_address(out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_max_address(out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_processor_id(out: *mut i32) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxDatabaseProcessorProfile {
    pub raw_id: i32,
    pub known_id: i32,
    pub has_known_id: ::std::os::raw::c_int,
    pub name: *mut ::std::os::raw::c_char,
    pub address_bitness: ::std::os::raw::c_int,
    pub big_endian: ::std::os::raw::c_int,
    pub abi_name: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxDatabaseProcessorProfile"]
        [::std::mem::size_of::<IdaxDatabaseProcessorProfile>() - 40usize];
    ["Alignment of IdaxDatabaseProcessorProfile"]
        [::std::mem::align_of::<IdaxDatabaseProcessorProfile>() - 8usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::raw_id"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, raw_id) - 0usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::known_id"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, known_id) - 4usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::has_known_id"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, has_known_id) - 8usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::name"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, name) - 16usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::address_bitness"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, address_bitness) - 24usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::big_endian"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, big_endian) - 28usize];
    ["Offset of field: IdaxDatabaseProcessorProfile::abi_name"]
        [::std::mem::offset_of!(IdaxDatabaseProcessorProfile, abi_name) - 32usize];
};
impl Default for IdaxDatabaseProcessorProfile {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_database_processor_profile(
        out: *mut IdaxDatabaseProcessorProfile,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_processor_profile_free(profile: *mut IdaxDatabaseProcessorProfile);
}
unsafe extern "C" {
    pub fn idax_database_processor_name(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_address_bitness(out: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_set_address_bitness(bits: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_is_big_endian(out: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_abi_name(out: *mut *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_database_address_span(out: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_path_basename(
        path: *const ::std::os::raw::c_char,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_path_dirname(
        path: *const ::std::os::raw::c_char,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_path_is_directory(
        path: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_undo_create_point(
        action_name: *const ::std::os::raw::c_char,
        label: *const ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_undo_undo_action_label(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_undo_redo_action_label(
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_undo_perform_undo(out: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_undo_perform_redo(out: *mut ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_description(
        kind: ::std::os::raw::c_int,
        address: u64,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_remember(
        kind: ::std::os::raw::c_int,
        address: u64,
        message: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_next(
        kind: ::std::os::raw::c_int,
        at_or_after: u64,
        out: *mut u64,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_remove(
        kind: ::std::os::raw::c_int,
        address: u64,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_name(
        kind: ::std::os::raw::c_int,
        long_form: ::std::os::raw::c_int,
        out: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_problem_contains(
        kind: ::std::os::raw::c_int,
        address: u64,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxBookmark {
    pub address: u64,
    pub slot: u32,
    pub description: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxBookmark"][::std::mem::size_of::<IdaxBookmark>() - 24usize];
    ["Alignment of IdaxBookmark"][::std::mem::align_of::<IdaxBookmark>() - 8usize];
    ["Offset of field: IdaxBookmark::address"]
        [::std::mem::offset_of!(IdaxBookmark, address) - 0usize];
    ["Offset of field: IdaxBookmark::slot"][::std::mem::offset_of!(IdaxBookmark, slot) - 8usize];
    ["Offset of field: IdaxBookmark::description"]
        [::std::mem::offset_of!(IdaxBookmark, description) - 16usize];
};
impl Default for IdaxBookmark {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn idax_bookmark_all(
        out: *mut *mut IdaxBookmark,
        count: *mut usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_at(
        address: u64,
        out: *mut IdaxBookmark,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_at_slot(
        slot: u32,
        out: *mut IdaxBookmark,
        has_value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_set(
        address: u64,
        description: *const ::std::os::raw::c_char,
        has_slot: ::std::os::raw::c_int,
        slot: u32,
        out: *mut IdaxBookmark,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_remove(
        address: u64,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_remove_slot(
        slot: u32,
        out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn idax_bookmark_free(bookmark: *mut IdaxBookmark);
}
unsafe extern "C" {
    pub fn idax_bookmarks_free(bookmarks: *mut IdaxBookmark, count: usize);
}
pub type IdaxNavigationHistoryHandle = *mut ::std::os::raw::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IdaxNavigationEntry {
    pub address: u64,
    pub channel: *mut ::std::os::raw::c_char,
    pub metadata: *mut ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of IdaxNavigationEntry"][::std::mem::size_of::<IdaxNavigationEntry>() - 24usize];
    ["Alignment of IdaxNavigationEntry"][::std::mem::align_of::<IdaxNavigationEntry>() - 8usize];
    ["Offset of field: IdaxNavigationEntry::address"]
        [::std::mem::offset_of!(IdaxNavigationEntry, address) - 0usize];
    ["Offset of field: IdaxNavigationEntry::channel"]
        [::std::mem::offset_of!(IdaxNavigationEntry, channel) - 8usize];
    ["Offset of field: IdaxNavigationEntry::metadata"]
        [::std::mem::offset_of!(IdaxNavigationEntry, metadata) - 16usize];
};
impl Default for IdaxNavigationEntry {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
